# Sorting

./: CMakeLists.txt  main.cpp
algorithms/: bubble_sort.cpp  insertion_sort.cpp  merge_sort.cpp  quick_sort.cpp  shell_sort.cpp  sorting.h
examples/: nuts_and_bolts.cpp  tasks.h
